--- a/src/app.html
+++ b/src/app.html
@@ -6,20 +6,17 @@
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<link rel="stylesheet" href="%sveltekit.assets%/common.css">
+	<link rel="stylesheet" href="%sveltekit.assets%/home.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link
 		href="https://fonts.googleapis.com/css2?family=Forum&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
-		rel="stylesheet">
+		rel="stylesheet" />
 	<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
 
 	%sveltekit.head%
 	<style>
-		body {
-			font-family: "Forum", serif;
-			font-weight: 400;
-			font-style: normal;
-		}
+
 	</style>
 </head>
 
