Add meta information

--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,10 @@
 	<meta charset="utf-8" />
 	<link rel="icon" href="%sveltekit.assets%/favicon.png" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="keywords" content="Location, Appartement, Veysonnaz, Ski, Valais, Montagne">
+	<meta name="description"
+		content="Location d'un appartement à Veysonnaz en Valais. Location au mois, à la saison ou à l'année">
+	<meta name="author" content="Jean-Marc Kleger">
 	<link rel="stylesheet" href="%sveltekit.assets%/common.css">
 	<link rel="stylesheet" href="%sveltekit.assets%/home.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
